# Derivatives_Underwriting_Workbench

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  PACKAGING.md  README.md  ROADMAP.md  duw.spec  pyproject.toml
.github/workflows/: ci.yml
src/duw/: __init__.py  app.py  config.py  examples.py  glossary.py  updates.py
src/duw/credit/: __init__.py  altman.py  merton.py  public_data.py  rating.py
src/duw/data/: __init__.py  counterparties.json  loader.py  market_snapshot.json
src/duw/data/scenarios/: balanced_growth_clean.json  credit_crunch_two_defaults.json  crossccy_funding_clean.json  dollar_surge_fx.json  mixed_book_one_default.json  rate_vol_swaptions.json  rates_rally_default.json  rising_rates_default.json  steady_book.json  tutorial_intro.json
src/duw/domain/: __init__.py  counterparty.py  instruments.py  market.py  results.py
src/duw/pipeline/: __init__.py  orchestrator.py  worker.py
src/duw/pricing/: __init__.py  cds.py  curves.py  fx_forward.py  irs.py  swaption.py  xccy.py
src/duw/reports/: __init__.py  deck.py  interpreter.py  memo.py
src/duw/risk/: __init__.py  collateral.py  cva.py  exposure.py  limits.py  scenarios.py  sensitivities.py  simulators.py
src/duw/scenario/: __init__.py  coaching.py  engine.py  io.py  model.py  scoring.py
src/duw/store/: __init__.py  deals.py
src/duw/ui/: __init__.py  app_state.py  dialogs.py  financials_fetch.py  help.py  main_window.py  sensitivities_run.py  simulator_run.py  theme.py  tooltips.py  update_check.py
src/duw/ui/tabs/: __init__.py  collateral_tab.py  counterparty_tab.py  cva_tab.py  exposure_tab.py  limits_tab.py  market_tab.py  memo_tab.py  pipeline_tab.py  scenario_tab.py  sensitivities_tab.py  simulator_tab.py  (+1 more)
tests/: __init__.py  conftest.py  test_analytics_tabs.py  test_app.py  test_chart_theme.py  test_charts.py  test_credit.py  test_cva_collateral.py  test_data_loader.py  test_domain.py  test_exposure.py  test_learn.py  test_limits.py  test_market_financials.py  test_memo_tab.py  test_orchestrator.py  test_pipeline_tab.py  test_pricing.py  test_reports.py  test_result_table.py  test_run_and_curves.py  test_scenario.py  test_scenario_coaching.py  test_scenario_scoring.py  test_scenario_tab.py  test_scenarios.py  test_sensitivities.py  test_settings_theme.py  test_simulator_coaching.py  test_simulator_tab.py  test_smoke.py  test_store.py  test_swaption.py  test_tooltips.py  test_ui_tabs.py  test_updates.py  test_worker.py  test_xccy.py
(+5 files in other folders)
